syntax = "proto3";

option csharp_namespace = "InventoryServices";

package Inventory;

import "messages.proto";

service InventoryServices {
	rpc GetInventoryItemById (InventoryIdRequest) returns (InventoryItem);
	rpc GetInventoryItemByName (InventoryNameRequest) returns (InventoryItem);
	rpc GetInventoryItemsByCategoryId (InventoryCategoryIdRequest) returns (InventoryByCategoryReply);
	rpc GetInventoryItemsByCategoryName (InventoryCategoryNameRequest) returns (InventoryByCategoryReply);
	rpc GetInventoryCategories (GetInventoryCategoriesRequest) returns (InventoryCategoriesReply);

	rpc CreateInventoryItem (NewInventoryItem) returns (InventoryItem);
	rpc UpdateInventoryItem (InventoryItem) returns (InventoryItem);
	rpc DeleteInventoryItem (InventoryItem) returns (InventoryDeleteReply);

	rpc CreateInventoryCategory (NewInventoryCategory) returns (InventoryCategory);
	rpc UpdateInventoryCategory (InventoryCategory) returns (InventoryCategory);
	rpc DeleteInventoryCategory (InventoryCategory) returns (InventoryDeleteReply);
}